--- a/src/styles/components/_inputs.scss
+++ b/src/styles/components/_inputs.scss
@@ -1,9 +1,12 @@
 .text-input {
-    border: 1px solid #cacccd;
-    height: 50px;
-    font-size: $font-size-large;
+    // border: 1px solid #cacccd;
+    // height: 50px;
+    font-size: 1.4rem;
     font-weight: 300;
-    padding: $s-size;
+    border: none;
+    padding: 1rem;
+    border-radius: 0.2rem;
+    width: 100%;
 }
 
 .select {
