--- a/src/styles/components/_button.scss
+++ b/src/styles/components/_button.scss
@@ -8,12 +8,31 @@
     line-height: 1;
     padding: $s-size;
     text-decoration: none;
+    outline: none;
+
+    &--link {
+        background: none;
+        transition: color 2s ease;
+        
+        &:hover {
+            color: #ff8908;
+        }
+    }
+
+    &--secondary {
+        background: #888;
+    }
+
+    &--primary {
+
+        background: #07508f;
+        padding: 0.8rem 1.5rem;
+        border-radius: 0.4rem;
+    }
 }
 
-.button--link {
-    background: none;
-}
+ 
 
-.button--secondary {
-    background: #888;
-}
+ 
+   
+ 
