--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,9 +1,14 @@
 @import './base/settings';
 @import './base/base';
+@import './components/banner';
 @import './components/box-layout';
 @import './components/button';
+@import './components/card';
+@import './components/cardholder';
 @import './components/content-container';
 @import './components/form';
+@import './components/filter';
+@import './components/grid';
 @import './components/header';
 @import './components/input-group';
 @import './components/inputs';
