Updated the branch with recent changes concerning the UI

--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -1,5 +1,15 @@
 // Colors
 $dark-grey: #333;
+$filter-grey: #364051;
+
+/* Primary Variations */
+$primary: #c40960;
+$primary-darker: #940349;
+$primary-theme: #9c024a;
+$primary-header: #da075a;
+
+$gold: #f38b0a;
+$bronze: #987070;
 $grey: #666;
 $blue: #1c88bf;
 $dark-blue: #364051;
@@ -9,7 +19,7 @@ $off-white: #f7f7f7;
 $font-size-small: 1.4rem;
 $font-size-large: 1.8rem;
 
-// fonts
+// spacing
 $s-size: 1.2rem;
 $m-size: 1.6rem;
 $l-size: 3.2rem;
