--- a/src/styles/components/_button.scss
+++ b/src/styles/components/_button.scss
@@ -13,7 +13,7 @@
     &--link {
         background: none;
         transition: color 2s ease;
-        
+
         &:hover {
             color: #ff8908;
         }
@@ -24,15 +24,39 @@
     }
 
     &--primary {
-
         background: #07508f;
         padding: 0.8rem 1.5rem;
         border-radius: 0.4rem;
+        transition: background 3s ease;
+
+        &:hover {
+            background: darken(#07508f, $amount: 17%);
+        }
+    }
+
+    &--view {
+        background: #770741;
+        border-radius: 0.4rem;
+        transition: background 2s ease;
+
+        &:hover {
+            background: darken(#770741, $amount: 10%);
+        }
+    }
+
+    &--dark {
+        background: #364051;
+        border-radius: 0.4rem;
+        
+        transition: background 2s ease;
+        margin: 1rem 4rem;
+
+        &:hover {
+            background: darken($primary, 20%);
+        }
+    }
+    
+    &--full {
+        width: 100%;
     }
 }
-
- 
-
- 
-   
- 
