--- a/src/styles/components/_inputs.scss
+++ b/src/styles/components/_inputs.scss
@@ -1,7 +1,5 @@
 .text-input {
-    // border: 1px solid #cacccd;
-    // height: 50px;
-    font-size: 1.4rem;
+    font-size: $font-size-small;
     font-weight: 300;
     border: none;
     padding: 1rem;
