--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,10 +1,12 @@
 @import './base/settings';
 @import './base/base';
 @import './components/banner';
+@import './components/backdrop';
 @import './components/box-layout';
 @import './components/button';
 @import './components/card';
 @import './components/cardholder';
+@import './components/checkbox';
 @import './components/content-container';
 @import './components/form';
 @import './components/filter';
@@ -12,8 +14,10 @@
 @import './components/header';
 @import './components/input-group';
 @import './components/inputs';
+@import './components/label';
 @import './components/list';
 @import './components/loader';
 @import './components/page-header';
+@import './components/sidebar';
 @import './components/visibility';
 
