removed unused code

--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -1,15 +1,26 @@
 // Colors
+// Metal colours
+$gold: #f38b0a;
+$lightbronze: #9c7071;
+$bronze: #987070;
 $dark-grey: #333;
 $filter-grey: #364051;
+
+// Backdrop
+$backdrop: rgba(66, 62, 62, 0.44);
 
 /* Primary Variations */
 $primary: #c40960;
 $primary-darker: #940349;
 $primary-theme: #9c024a;
 $primary-header: #da075a;
+$primary-button: #770741;
+$primary-filter: #b91067;
 
-$gold: #f38b0a;
-$bronze: #987070;
+$secondary: #07508f;
+$warning: #ff8908;
+
+//
 $grey: #666;
 $blue: #1c88bf;
 $dark-blue: #364051;
