--- a/src/styles/components/_button.scss
+++ b/src/styles/components/_button.scss
@@ -15,7 +15,7 @@
         transition: color 2s ease;
 
         &:hover {
-            color: #ff8908;
+            color: $warning;
         }
     }
 
@@ -24,28 +24,28 @@
     }
 
     &--primary {
-        background: #07508f;
+        background: $secondary;
         padding: 0.8rem 1.5rem;
         border-radius: 0.4rem;
         transition: background 3s ease;
 
         &:hover {
-            background: darken(#07508f, $amount: 17%);
+            background: darken($secondary, $amount: 17%);
         }
     }
 
     &--view {
-        background: #770741;
+        background: $primary-button;
         border-radius: 0.4rem;
         transition: background 2s ease;
 
         &:hover {
-            background: darken(#770741, $amount: 10%);
+            background: darken($primary-button, $amount: 10%);
         }
     }
 
     &--dark {
-        background: #364051;
+        background: $filter-grey;
         border-radius: 0.4rem;
         
         transition: background 2s ease;
@@ -55,7 +55,7 @@
             background: darken($primary, 20%);
         }
     }
-    
+
     &--full {
         width: 100%;
     }
