--- a/src/styles/components/_card.scss
+++ b/src/styles/components/_card.scss
@@ -32,7 +32,6 @@
     &__img {
         position: relative;
 
-
         &>img {
             width: 100%;
         }
@@ -65,7 +64,7 @@
 
     &__body {
         &__rating {
-            color: #fb8d05;
+            color: $warning;
             font-weight: 700;
         }
     }
@@ -78,7 +77,7 @@
         grid-template-areas: "i i d d";
 
         &__rating {
-            color: #fb8d05;
+            color: $warning;
             font-weight: 700;
         }
 
@@ -103,13 +102,13 @@
     }
 
     &__title {
-        color: #364051;
+        color: $filter-grey;
         padding: 2rem;
     }
 
     &__label {
         font-weight: 700;
-        color: #9c7071;
+        color: $lightbronze;
         margin: 0;
     }
 
