--- a/src/styles/components/_filter.scss
+++ b/src/styles/components/_filter.scss
@@ -14,7 +14,7 @@
 
     &__container {
         color: #ececec;
-        background: #b91067;
+        background: $primary-filter;
 
         select {
             width: 100%;
