--- a/src/styles/components/_backdrop.scss
+++ b/src/styles/components/_backdrop.scss
@@ -1,7 +1,6 @@
 .backdrop {
-    background: rgba(66, 62, 62, 0.44);
-    width: 100%;
-    height: 100%;
+    background: $backdrop;
+    @extend .fullpage;
     position: fixed;
     top: 0px;
     z-index: 4;
