--- a/src/styles/components/_box-layout.scss
+++ b/src/styles/components/_box-layout.scss
@@ -10,7 +10,7 @@
 
 .box-layout__box {
     background: fade-out(#fff, .15);
-    border-radius: 3px;
+    border-radius: 0.3rem;
     padding: $l-size $m-size;
     text-align: center;
     width: 25rem;
