--- a/src/styles/components/_sidebar.scss
+++ b/src/styles/components/_sidebar.scss
@@ -18,6 +18,7 @@ $min-width: 30rem;
   width: 100%;
   height: 100vh;
   border-right: 1px solid $primary-darker;
+  overflow-y: scroll;
   transition: display 2s ease;
 
   &__content {
